force-app/main/default/objects/Reseau__c/Reseau__c.object-meta.xml
<CustomObject>
    <description>Un réseau est un ensemble de caractéristiques communes à des PUDO parmi : service, opérateur, pays, opérateur...</description>
    <label>Réseau</label>
    <nameField>
        <label>Nom du Réseau</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Réseaux</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>