force-app/main/default/objects/Reseau__c/fields/AlerteSeuil__c.field-meta.xml
<CustomField>
    <fullName>AlerteSeuil__c</fullName>
    <formula>IF(  NombredePUDOAssocies__c	 &gt;=  Seuil_Minimal__c ,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;OK&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;NOK&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerte Seuil</label>
    <type>Text</type>
</CustomField>