force-app/main/default/objects/Reseau__c/fields/Chargeur__c.field-meta.xml
<CustomField>
    <fullName>Chargeur__c</fullName>
    <inlineHelpText>pour information</inlineHelpText>
    <label>Chargeur</label>
    <length>40</length>
    <type>Text</type>
</CustomField>