force-app/main/default/objects/Reseau__c/fields/Domaine_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_activite__c</fullName>
    <label>Domaine d&#39;activité</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Artisanat &amp; services</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Auto, Moto</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cadeaux, Gadgets</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Commerces alimentaires</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Commerces de loisirs</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Equipement maison</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Equipement personne</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Fleuriste, Jardinerie, animalerie</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Médical, Paramédical</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Mercerie, Confection, Laine</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Multi-services</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Photographe</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Presse, Tabac, Librairie, Papeterie</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Pressing, Laverie, Repassage</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Téléphonie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>