force-app/main/default/objects/Reseau__c/fields/Horaire_d_ouverture_de_reference__c.field-meta.xml
<CustomField>
    <fullName>Horaire_d_ouverture_de_reference__c</fullName>
    <label>Horaire d&#39;ouverture de référence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>