force-app/main/default/objects/Reseau__c/fields/ID_Reseau__c.field-meta.xml
<CustomField>
    <fullName>ID_Reseau__c</fullName>
    <label>ID Réseau</label>
    <length>50</length>
    <type>Text</type>
</CustomField>