force-app/main/default/objects/Reseau__c/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <label>Network Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>