force-app/main/default/objects/Reseau__c/fields/NombredePUDOAssocies__c.field-meta.xml
<CustomField>
    <fullName>NombredePUDOAssocies__c</fullName>
    <label>Nombre de PUDO Associés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>