force-app/main/default/objects/Reseau__c/fields/Operateur__c.field-meta.xml
<CustomField>
    <fullName>Operateur__c</fullName>
    <label>Opérateur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_OPE</valueSetName>
    </valueSet>
</CustomField>