force-app/main/default/objects/Reseau__c/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <label>Partenaire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_PAR</valueSetName>
    </valueSet>
</CustomField>