force-app/main/default/objects/Reseau__c/fields/Poidsmaxacceptparcolis__c.field-meta.xml
<CustomField>
    <fullName>Poidsmaxacceptparcolis__c</fullName>
    <label>Poids maximal accepté par colis_</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_POI</valueSetName>
    </valueSet>
</CustomField>