force-app/main/default/objects/Reseau__c/fields/Propriete_du_reseau__c.field-meta.xml
<CustomField>
    <fullName>Propriete_du_reseau__c</fullName>
    <label>Propriété du réseau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Transporteur</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>