force-app/main/default/objects/Reseau__c/fields/Seuil_Minimal__c.field-meta.xml
<CustomField>
    <fullName>Seuil_Minimal__c</fullName>
    <label>Seuil Minimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>