force-app/main/default/objects/Reseau__c/fields/Tech_Operateur__c.field-meta.xml
<CustomField>
    <fullName>Tech_Operateur__c</fullName>
    <label>Tech Operateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>