force-app/main/default/objects/Reseau__c/fields/Type_de_reseau__c.field-meta.xml
<CustomField>
    <fullName>Type_de_reseau__c</fullName>
    <label>Type de réseau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>