force-app/main/default/objects/Reseau__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_de_reseau__c</columns>
    <columns>Operateur__c</columns>
    <columns>Tech_Operateur__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>