force-app/main/default/objects/Reseau__c/listViews/NETWORK_PUS_FR.listView-meta.xml
<ListView>
    <fullName>NETWORK_PUS_FR</fullName>
    <columns>NAME</columns>
    <columns>Pays__c</columns>
    <columns>Propriete_du_reseau__c</columns>
    <columns>Type_de_reseau__c</columns>
    <columns>Operateur__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operateur__c</field>
        <operation>equals</operation>
        <value>PUS_FR</value>
    </filters>
    <label>PUS_FR</label>
    <language>en_US</language>
    <sharedTo>
        <group>SUPPORT_DOSI</group>
    </sharedTo>
</ListView>